--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,13 +3,12 @@
   padding: 0;
   text-decoration: none;
   font-family: "Trebuchet MS", sans-serif;
-  color: white;
+  color: rgb(221, 221, 221);
 }
-html,
-body {
+html, body {
   max-width: 100%;
-  min-height: 100%;
-  overflow-x: hidden;
+  min-height: 100vh;
+  background-color: #1f1f1f;
 }
 body {
   background: radial-gradient(
@@ -24,7 +23,11 @@ p {
   line-height: 1.5em;
 }
 .layout {
+  position: relative;
+  min-height: 100vh;
+  min-width: 100%;
   margin: 0 auto;
+  //box-sizing: border-box;
 }
 .button {
   display: inline-block;
@@ -34,17 +37,22 @@ p {
   padding: 5px 16px;
   border-radius: 8px;
   transition: 0.05s;
-  border: 3px solid #e29c7d;
+  border: 2px solid #e29c7d;
+}
+div > nav > ul > li:nth-child(4) > a:hover{
+  background-color: #e29c7d;
+  border: 2px solid #e29c7d;
+  color: #1f1f1f;
 }
 
 /* Navbar */
 nav {
+  z-index: 2;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 10px;
   height: 70px;
-  border-bottom: 3px solid rgb(58, 58, 58);
+  border-bottom: 2px solid rgb(58, 58, 58);
 }
 nav .links {
   display: flex;
@@ -59,15 +67,16 @@ nav .logo {
 }
 nav .links a {
   margin-left: 30px;
-  font-size: 18px;
+  font-size: 14px;
   transition: 0.1s;
 }
 nav .links a:hover {
-  border-bottom: 3px solid white;
+  border-bottom: 2px solid white;
 }
 nav .burger {
   display: none;
   cursor: pointer;
+  z-index: 2;
 }
 nav .burger div {
   width: 23px;
@@ -83,10 +92,10 @@ nav .burger div {
   }
   nav .links {
     z-index: 1;
-    position: absolute;
+    position: fixed;
     right: 0px;
     bottom: 0;
-    top: 90px;
+    top: 0;
     width: 50%;
     display: none;
     flex-direction: column;
@@ -128,4 +137,42 @@ nav .burger div {
   to {
     opacity: 100%;
   }
+}
+
+/* Content */
+div .content {
+  padding-bottom: 100px;
+}
+
+/* Footer */
+footer {
+  position: absolute;
+  max-width: 100%;
+  clear: both;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #1f1f1f;
+  padding-top: 20px;
+  padding-left: auto;
+  //transform: translateY(100%);
+}
+footer .links {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  font-size: 14px;
+}
+footer .links a {
+  margin: 5vw;
+  color: rgb(138, 138, 138);
+  
+}
+footer .links a:hover {
+  color: rgb(206, 206, 206);
+}
+footer p {
+  color: rgb(138, 138, 138);
+  font-size: 12px;
+  text-align: center;
 }
