--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -2,12 +2,13 @@
   z-index: 0;
   width: 100%;
   height: 350px;
-  background-color: #1f1f1f;
+  background-color: #1f1f1f4d;
   background-image: url("/squares.svg");
   background-size: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: 2px solid rgb(58, 58, 58);
 }
 .logo {
   max-width: 300px;
@@ -30,11 +31,11 @@
   animation: typewriter 1s steps(7) 0.7s 1 normal both,
     blinkTextCursor 800ms steps(44) infinite normal;
 }
-.typewriter span{
+.typewriter span {
   font-family: "Courier";
   font-weight: 300;
   font-size: 50px;
-  color:#F4D585;
+  color: #f4d585;
 }
 .header h3 {
   font-family: "Courier";
@@ -54,10 +55,10 @@ main h1 {
   margin: 0 10%;
 }
 main h1 .first {
-  color:#F4D585
+  color: #f4d585;
 }
 main h1 .second {
-  color:#e29c7d;
+  color: #e29c7d;
 }
 main div {
   display: block;
@@ -76,7 +77,7 @@ main .button {
   outline: none;
   overflow: hidden;
   background-color: #e29c7d;
-  
+
   span {
     position: relative;
     pointer-events: none;
@@ -85,7 +86,7 @@ main .button {
 
   &::before {
     --size: 0;
-    content: '';
+    content: "";
     position: absolute;
     left: var(--x);
     top: var(--y);
@@ -93,7 +94,7 @@ main .button {
     height: var(--size);
     background: radial-gradient(circle closest-side, #ffffff4b, transparent);
     transform: translate(-50%, -50%);
-    transition: width .2s ease, height .2s ease;
+    transition: width 0.2s ease, height 0.2s ease;
   }
 
   &:hover::before {
@@ -123,4 +124,3 @@ main .button {
     border-right-color: transparent;
   }
 }
-
