--- a/src/styles/project-details.module.css
+++ b/src/styles/project-details.module.css
@@ -2,7 +2,8 @@ table {
   border-spacing: 20px;
   margin: 0 auto;
 }
-th, td {
+th,
+td {
   width: 200px;
   overflow: hidden;
 }
@@ -17,14 +18,33 @@ h3.stack {
   margin-bottom: 10px;
 }
 .html {
+  max-width: 800px;
   width: 70%;
   margin: 0 auto;
 }
 .html h3 {
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  font-weight: 900;
 }
 .html p {
   margin: 0;
-  font-size: 14px;
+  font-size: 16px;
+  text-align: justify;
+}
+
+div.slide {
+  max-width: 350px;
+  min-width: 230px;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 80px;
+}
+div.image {
+  text-align: center;
+}
+div.image:focus {
+  outline: none;
 }
