--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,126 +1,145 @@
-.header {
-  z-index: 0;
-  width: 100%;
-  height: 350px;
-  background-color: #1f1f1f4d;
-  background-image: url("/squares.svg");
-  background-size: 32px;
+header {
   display: flex;
+  margin: 0 15%;
+  margin-top: 100px;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  border-bottom: 2px solid rgb(58, 58, 58);
-}
-.logo {
-  max-width: 300px;
-  max-height: 300px;
-  height: 60%;
-  margin-right: 20px;
-}
-.header div {
-  width: 200px;
-}
-.typewriter {
-  font-family: "Courier";
-  font-weight: 300;
-  font-size: 50px;
-  position: relative;
-  border-right: 2px solid rgba(255, 255, 255, 0.75);
-  white-space: nowrap;
-  overflow: hidden;
-  margin-top: 0;
-  animation: typewriter 1s steps(7) 0.7s 1 normal both,
-    blinkTextCursor 800ms steps(44) infinite normal;
-}
-.typewriter span {
-  font-family: "Courier";
-  font-weight: 300;
-  font-size: 50px;
-  color: #f4d585;
-}
-.header h3 {
-  font-family: "Courier";
-  font-weight: 300;
-  font-size: 25px;
-  text-align: left;
-  margin-top: 0;
-}
 
-main {
-  margin-top: 20px;
-  text-align: center;
-}
-main h1 {
-  text-align: center;
-  font-weight: 100;
-  margin: 0 10%;
-}
-main h1 .first {
-  color: #f4d585;
-}
-main h1 .second {
-  color: #e29c7d;
-}
-main div {
-  display: block;
-  margin-top: 20px;
-  text-align: center;
-  margin: 0 10%;
-}
-main .button {
-  position: relative;
-  appearance: none;
-  display: inline-block;
-  border-radius: 8px;
-  padding: 8px;
-  margin-top: 20px;
-  cursor: pointer;
-  outline: none;
-  overflow: hidden;
-  background-color: #e29c7d;
+  div.type {
+    font-size: 4vw;
+    div.head {
+      h1 {
+        margin: 0;
+        margin-bottom: 20px;
+        color: #ca7d5c;
+        text-align: left;
+        font-weight: bolder;
+        font-size: 1em;
+        letter-spacing: 0.1em;
 
-  span {
+        span {
+          color: #e8d98c;
+        }
+      }
+    }
+    p {
+      font-size: 0.3em;
+      text-align: left;
+      letter-spacing: 0.1em;
+      font-weight: 100;
+      margin: 0;
+      margin-top: 0;
+      margin-bottom: 30px;
+    }
+    .button {
+      font-size: 0.3em;
+      position: relative;
+      appearance: none;
+      display: inline-block;
+      border-radius: 8px;
+      padding: 10px;
+      margin-top: 20px;
+      cursor: pointer;
+      outline: none;
+      overflow: hidden;
+      background-color: #e29c7d;
+      animation: button-spawn 2s ease;
+      transition: 0.1s;
+
+      span {
+        position: relative;
+        pointer-events: none;
+        color: #1f1f1f;
+      }
+
+      &::before {
+        --size: 0;
+        content: "";
+        position: absolute;
+        left: var(--x);
+        top: var(--y);
+        width: var(--size);
+        height: var(--size);
+        background: radial-gradient(
+          circle closest-side,
+          #ffffff4b,
+          transparent
+        );
+        transform: translate(-50%, -50%);
+        transition: width 0.2s ease, height 0.2s ease;
+      }
+
+      &:hover {
+        transform: scale(1.02);
+      }
+
+      &:hover::before {
+        --size: 400px;
+      }
+    }
+  }
+
+  div.hero {
     position: relative;
-    pointer-events: none;
-    color: #1f1f1f;
+    display: inline-block;
+    width: 35%;
+    animation: hero-spawn 2s ease;
   }
 
-  &::before {
-    --size: 0;
-    content: "";
-    position: absolute;
-    left: var(--x);
-    top: var(--y);
-    width: var(--size);
-    height: var(--size);
-    background: radial-gradient(circle closest-side, #ffffff4b, transparent);
-    transform: translate(-50%, -50%);
-    transition: width 0.2s ease, height 0.2s ease;
-  }
-
-  &:hover::before {
-    --size: 400px;
+  div.hero svg {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
   }
 }
 
-@keyframes typewriter {
+// Other screen sizes
+
+@media screen and (max-width: 850px) {
+  header {
+    flex-direction: column-reverse;
+    margin-top: 30px;
+    div.type {
+      font-size: 7vw;
+
+      p {
+        font-size: 0.4em;
+      }
+      .button {
+        font-size: 0.4em;
+      }
+    }
+
+    div.hero {
+      width: 80%;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+// Animations
+
+@keyframes hero-spawn {
   from {
-    width: 0;
+    top: -30px;
+    opacity: 0;
   }
   to {
-    width: 4.2em;
+    top: 0px;
+    opacity: 1;
   }
 }
-@keyframes blinkTextCursor {
+@keyframes button-spawn {
   0% {
-    border-right-color: rgba(255, 255, 255, 0.75);
-  }
-  49% {
-    border-right-color: rgba(255, 255, 255, 0.75);
+    left: -20px;
+    opacity: 0;
   }
   50% {
-    border-right-color: transparent;
+    left: -20px;
+    opacity: 0;
   }
   100% {
-    border-right-color: transparent;
+    left: 0px;
+    opacity: 1;
   }
 }
