--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,12 +1,12 @@
 header {
   display: flex;
-  margin: 0 15%;
-  margin-top: 100px;
+  margin: 3% 15%;
   justify-content: space-between;
   align-items: center;
 
+
   div.type {
-    font-size: 4vw;
+    font-size: 3.6vw;
     div.head {
       h1 {
         margin: 0;
