--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -10,6 +10,10 @@ p a {
   color: cornflowerblue;
   text-decoration: underline;
 }
+p.error {
+  color: rgb(230, 63, 63);
+  font-size: 1.3em;
+}
 
 div.form_parent {
   margin-top: 40px;
