--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -186,7 +186,7 @@ footer p {
 }
 footer .social-media {
   display: inline-block;
-  margin: 10px 0;
+  margin: 10px 5px;
   opacity: 0.3;
 }
 footer .social-media:hover {
